--- a/MasterPage.master
+++ b/MasterPage.master
@@ -11,12 +11,12 @@
     </asp:ContentPlaceHolder> 
     <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Content/font-awesome.css" rel="stylesheet" />
-    <link href="Content/bootstrap-theme.css" rel="stylesheet" />
+   
 </head>
 <body> 
    <div id="content"></div>    
     <form id="form1" runat="server">
-       <nav class="navbar navbar-inverse">
+       <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -26,7 +26,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="Home.aspx"><img src="Assets/logo.png" width="60px"/></a>
+                    <a href="Home.aspx"><img src="Assets/logo.png" width="50px"/></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
