-Change logout button

--- a/MasterPage.master
+++ b/MasterPage.master
@@ -30,7 +30,7 @@
                     <span>
                     <asp:HyperLink ID="LoginLink" Visible="true" NavigateUrl="Login.Aspx" Text="Login" runat="server"/>
                     <asp:Label ID="SessionLabel" runat="server" Visible="false">Welcome <%Response.Write(Session["Username"]);%></asp:Label>
-                     <asp:Button ID="Logout" Visible="true" Text="Logout" runat="server" ValidationGroup="Login1" OnClick="Logout_Click"/>
+                     <asp:Button ID="Logout" Visible="true" Text="Logout" runat="server" ValidationGroup="Login1" OnClick="Logout_Click" CssClass="btn-danger"/>
                         </span>
 
 
